# land-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/clarabel_opt/: Cargo.toml
crates/clarabel_opt/src/: constraints.rs  expression.rs  flatten.rs  lib.rs  matrix.rs  variable.rs
crates/gfold_rs/: Cargo.toml
crates/gfold_rs/examples/: apdg.rs  clarabel_example.rs  plotting.rs  raw_clarabel_solver.rs
crates/gfold_rs/src/: error.rs  lib.rs  prelude.rs  rocket_config.rs  state.rs
crates/gfold_rs/src/guidance/: mod.rs
crates/gfold_rs/src/plotting/: data_extraction.rs  mod.rs
crates/gfold_rs/src/trajectories/: apdg.rs  convergence.rs  mod.rs
crates/gfold_rs/src/trajectories/apdg/: error.rs  mod.rs  models.rs  problem.rs  variables.rs
crates/gfold_rs/src/trajectories/apdg/guess/: error.rs  mod.rs  problem.rs
crates/gfold_rs/src/trajectories/apdg/sucessive/: mod.rs  problem.rs  taylor_expansion.rs
crates/gfold_rs/src/utils/: lpvector3.rs  mod.rs
crates/land_core/: Cargo.toml
crates/land_core/src/: algo.rs  lib.rs  streams.rs
crates/land_core/src/algorithms/dumb/: exit.rs  mod.rs
crates/land_krpc/: Cargo.toml
crates/land_krpc/libs/krpc_sys/src/: drawing.rs  remote_tech.rs
crates/land_sim/: Cargo.toml
crates/land_sim/src/: main.rs  metrics.rs  prelude.rs
crates/land_sim/src/cam/: mod.rs  pan_orbit_camera.rs  rocket_camera.rs
crates/land_sim/src/event_mapper/: double_click.rs  mapper.rs  mod.rs
crates/land_sim/src/gestures/: gesture_system.rs  mod.rs
crates/land_sim/src/guidance/: mod.rs
crates/land_sim/src/rocket/: control.rs  control_state_ui.rs  drag.rs  fuel.rs  mod.rs  object.rs
crates/land_sim/src/utils/: diagnostics.rs  mod.rs
docs/: main.typ  references.bib
docs/chapters/: abstract.typ  appendices.typ  background.typ  conclusion.typ  convex_approch.typ  convex_optimisation.typ  following_system.typ  future_work.typ  guidance_controller.typ  introduction.typ  literature_review.typ  methodology.typ  preliminary_results.typ  problem_analysis.typ  progress_update.typ  results.typ  rl_approach.typ  simulation.typ  technology_stack.typ  timeline_and_plan.typ
docs/chapters/implementation/: algorithm.typ  guidance_controller.typ  index.typ  simulation.typ
docs/code/: ecs.typ  flow.mmd  good_lp.typ  guidance_controller_diagram.typ  rocket.typ  zemzev_hoverslam.typ
docs/code/rocket/: body.typ  engine.typ  joint.typ
docs/styles/: abbreviations.typ  abstract.typ  components.typ  frontpage.typ  styles.typ
land_core/src/algorithms/dumb/: run.rs
land_gui/: Cargo.toml
land_gui/src/: main.rs
land_gui/src/components/: ThemeSelector.rs  mod.rs
land_krpc/libs/krpc_sys/: Cargo.toml
land_krpc/libs/krpc_sys/services/: KRPC.SpaceCenter.json
land_krpc/libs/krpc_sys/src/: kerbal_alarm_clock.rs  space_center.rs
land_libs/: Cargo.toml  build.rs
land_libs/src/: drawing.rs  infernal_robotics.rs  space_center.rs
land_sim/: Cargo.toml
land_sim/src/: lib.rs  main.rs
land_sim/src/cam/: mod.rs  pan_orbit_camera.rs
land_sim/src/event_mapper/: mapper.rs
land_sim/src/gestures/: double_left_click_system.rs  gesture_system.rs  mod.rs
land_sim/src/rocket/: control.rs  control_state_ui.rs  mod.rs  object.rs
land_sim/src/utils/: diagnostics.rs
patches/: good_lp+1.13.0.patch
