[workspace]

members = ["crates/gfold_rs", "crates/land_sim"]

resolver = "2" # Important! wgpu/Bevy needs this!

default-members = ["crates/land_sim"]

[workspace.dependencies]

#
# Workspace member crates
#
gfold-rs = { path = "crates/gfold_rs" }

#
# External crates
#


# Error handling
thiserror = "1"
anyhow = "1"

# Bevy
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.28", features = [
  "simd-stable",
  "debug-render-3d",
] }
bevy-inspector-egui = { version = "0.28" }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", rev = "d8f3cbb" }
bon = "3.3.2"
