[workspace]

members = ["crates/gfold_rs", "crates/land_sim"]

resolver = "2" # Important! wgpu/Bevy needs this!

default-members = ["crates/land_sim"]

exclude = ["./target/patch/good_lp-1.13.0"]

[workspace.dependencies]

#
# Workspace member crates
#
gfold-rs = { path = "crates/gfold_rs" }

#
# External crates
#


# Error handling
thiserror = "2"
anyhow = "1"

# Bevy
bevy = { version = "0.15", features = ["dynamic_linking", "wayland"] }
bevy_rapier3d = { version = "0.29", features = [
  "simd-stable",
  "debug-render-3d",
] }
bevy-inspector-egui = { version = "0.30" }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", rev = "d8f3cbb" }

# convex optimisation
uom = "0.36"
nalgebra = "0.33"
clarabel = { git = "https://github.com/oxfordcontrol/Clarabel.rs", rev = "e0ed282" }
plotters = "0.3.7"
good_lp = { version = "1.13.0", default-features = false, features = [
  "clarabel",
] }

# Utilities
bon = "3.5"
autodiff = { version = "0.7", features = ["na"] }
num-traits = "0.2"


[workspace.metadata.patch]
crates = ["good_lp"]

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/theoparis/pathfinder.git" }
good_lp = { path = "./target/patch/good_lp-1.13.0" }
