[package]
name = "gfold-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clarabel = { workspace = true }
thiserror = { workspace = true }
bon = { workspace = true }
nalgebra = { workspace = true }
uom = { workspace = true }
plotters = { workspace = true }
good_lp = { workspace = true }
autodiff = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

# ------------------------------
# enable latex in docs 
# credit: https://github.com/victe/rust-latex-doc-minimal-example
# ------------------------------

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./html/rustdocs-header.html"]
features = ["sdp", "sdp-mkl"]
