[package]
name = "krpc_sys"
version = "0.1.0"
authors = ["Galielo"]
description = "KRPC Rust bindings"

[dependencies]
krpc_mars = { git = "https://github.com/Cahu/krpc-mars", commit = "e421693" }
failure = "0.1.8"

[build-dependencies]
krpc_mars_terraformer = { git = "https://github.com/Cahu/krpc-mars-terraformer", commit = "633c3e7" }
glob = "0.3.1"

protoc-rust = "2.0"
